--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="widht=device-width, initial-scale=1.0" />
     <title>Sergio Pereda Torcida | Abogado</title>
-    <link href="CSS/abogado.css" rel="stylesheet" >
+    <link href="CSS/style.css" rel="stylesheet" >
     <link href="img/abogado.png">
 </head>
 <body>
@@ -80,3 +80,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
